# sp-flood-platform-mvp

./: .gitignore  README.md
backend/: README.md  pyproject.toml  start_app.bat  start_app.ps1
backend/app/: main.py
backend/app/etl/: geosampa.py
backend/app/web/templates/: index.html  mapa.html
backend/sp_flood_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docker/: docker-compose.yml
