[project]
name = "sp-flood-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "SQLAlchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "GeoAlchemy2>=0.15.0",
  "psycopg[binary]>=3.2.1",
  "jinja2>=3.1.4",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1"
]

[tool.uvicorn]
reload = true
port = 8000
host = "0.0.0.0"